// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnorderedList renders correctly 1`] = `
.c0 {
  margin: 0;
  padding: auto;
  color: #444444;
  list-style-type: square;
}

<ul
  className="c0"
/>
`;

exports[`UnorderedList renders correctly simple list 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  color: #444444;
  list-style-type: none;
}

<ul
  className="c0"
/>
`;
